--- a/SampleApp/Base.lproj/Main.storyboard
+++ b/SampleApp/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                                 <rect key="frame" x="185.66666666666666" y="353" width="43" height="30"/>
                                 <state key="normal" title="Modal"/>
                                 <connections>
-                                    <segue destination="9NM-FK-bgc" kind="show" id="vuF-Pz-jRH"/>
+                                    <segue destination="9NM-FK-bgc" kind="presentation" id="46n-05-9Su"/>
                                 </connections>
                             </button>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="0aT-Rs-5as">
@@ -197,7 +197,7 @@
             </objects>
             <point key="canvasLocation" x="1389.8550724637682" y="1042.663043478261"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="EAZ-N0-WFb">
             <objects>
                 <viewController id="9NM-FK-bgc" sceneMemberID="viewController">
@@ -213,7 +213,7 @@
                                 <rect key="frame" x="190" y="353" width="34" height="30"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="wrS-g9-UMX" kind="show" id="0q5-e9-5Ev"/>
+                                    <segue destination="wrS-g9-UMX" kind="show" id="xwd-Xl-c0H"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -223,6 +223,7 @@
                             <constraint firstItem="v4W-S1-PEf" firstAttribute="centerY" secondItem="Oe4-bb-Qs4" secondAttribute="centerY" id="Zox-HR-yxa"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="FZ3-Rf-Cvg"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bxf-Xx-9vx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -261,24 +262,33 @@
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JKt-mT-t6s" id="0Qw-gM-CDT">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MovieYear" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0P-Y8-bOd">
-                                            <rect key="frame" x="310" y="11" width="85" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MovieYear" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0P-Y8-bOd">
+                                            <rect key="frame" x="317.66666666666674" y="11" width="78.333333333333314" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RyT-R0-efS">
-                                            <rect key="frame" x="28" y="11" width="238" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RyT-R0-efS">
+                                            <rect key="frame" x="22" y="11" width="255" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="255" id="luK-LN-tOo"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="RyT-R0-efS" secondAttribute="bottom" constant="3.5" id="1U6-NJ-Xeb"/>
+                                        <constraint firstItem="RyT-R0-efS" firstAttribute="top" secondItem="0Qw-gM-CDT" secondAttribute="topMargin" constant="3" id="H1N-7W-6WD"/>
+                                        <constraint firstItem="RyT-R0-efS" firstAttribute="leading" secondItem="0Qw-gM-CDT" secondAttribute="leadingMargin" constant="10" id="OQE-fg-yF4"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="o0P-Y8-bOd" secondAttribute="bottom" constant="3.5" id="TC0-RA-gQs"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="o0P-Y8-bOd" secondAttribute="trailing" constant="10" id="gLX-bH-Fx4"/>
+                                        <constraint firstItem="o0P-Y8-bOd" firstAttribute="top" secondItem="0Qw-gM-CDT" secondAttribute="topMargin" constant="3" id="xea-fE-QHx"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="movieTitleLabel" destination="RyT-R0-efS" id="ghh-Ja-ZYE"/>
@@ -310,26 +320,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9mn-Rg-2Cc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9mn-Rg-2Cc">
                                 <rect key="frame" x="0.0" y="64" width="414" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kl1-80-9ud">
-                                <rect key="frame" x="0.0" y="110" width="414" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kl1-80-9ud">
+                                <rect key="frame" x="0.0" y="95" width="414" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bEA-bL-qHM">
-                                <rect key="frame" x="0.0" y="169" width="414" height="518"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bEA-bL-qHM">
+                                <rect key="frame" x="0.0" y="136" width="414" height="551"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bEA-bL-qHM" firstAttribute="leading" secondItem="xS1-dJ-fQL" secondAttribute="leading" id="8sm-yI-Su3"/>
+                            <constraint firstItem="Kl1-80-9ud" firstAttribute="leading" secondItem="xS1-dJ-fQL" secondAttribute="leading" id="Ddy-E6-NiF"/>
+                            <constraint firstItem="Kl1-80-9ud" firstAttribute="top" secondItem="9mn-Rg-2Cc" secondAttribute="bottom" constant="10" id="JK1-ib-GtZ"/>
+                            <constraint firstAttribute="trailing" secondItem="Kl1-80-9ud" secondAttribute="trailing" id="Kiy-tW-WvD"/>
+                            <constraint firstAttribute="trailing" secondItem="9mn-Rg-2Cc" secondAttribute="trailing" id="TmM-ck-44a"/>
+                            <constraint firstItem="9mn-Rg-2Cc" firstAttribute="top" secondItem="Ph7-gn-03W" secondAttribute="bottom" id="bZ5-ui-vHo"/>
+                            <constraint firstAttribute="trailing" secondItem="bEA-bL-qHM" secondAttribute="trailing" id="dTr-5I-Gf2"/>
+                            <constraint firstItem="bEA-bL-qHM" firstAttribute="top" secondItem="Kl1-80-9ud" secondAttribute="bottom" constant="20" id="hDf-Ju-Y7w"/>
+                            <constraint firstItem="9mn-Rg-2Cc" firstAttribute="leading" secondItem="xS1-dJ-fQL" secondAttribute="leading" id="vWt-iK-Yhs"/>
+                            <constraint firstItem="mjG-B6-etK" firstAttribute="top" secondItem="bEA-bL-qHM" secondAttribute="bottom" id="zMm-XP-qWa"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="moviePoster" destination="bEA-bL-qHM" id="4b8-xs-sgn"/>
@@ -362,6 +381,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0q5-e9-5Ev"/>
+        <segue reference="xwd-Xl-c0H"/>
     </inferredMetricsTieBreakers>
 </document>
